# FoxClaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CTO_REVIEW_PACKET.md  DOCS_RECONCILIATION_PLAN.md  FOXCLAW_ASSURANCE_SUMMARY.md  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  ROADMAP_NORMALIZATION.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
agents/: AGENTS.md
docs/: ARCHITECTURE.md  ASSURANCE.md  AUDIT_2026-02-24.md  BASELINES.md  CLI_CONTRACT.md  CODEX_WORKFLOW.md  CONTRACT_COMPATIBILITY.md  DECISIONS.md  DELIVERY_GATES.md  DEPENDENCY_AUDIT.md  DEVELOPMENT.md  FLEET_OUTPUT.md  GITHUB_ACTIONS.md  INDEX.md  MISTAKES.md  PREMERGE_READINESS.md  PROFILE_FIDELITY_SPEC.md  PROFILE_FUZZ_ROADMAP.md  PROFILE_HANDOFF.md  PROFILE_REVIEW_CHECKLIST.md  PROFILE_SYNTHESIS.md  PROJECT_CHARTER.md  QUALITY_GATES.md  RELEASE_PROVENANCE.md  RESEARCH.md  RESEARCH_2026-02-20.md  RESEARCH_2026-02-22_RUST_APPLIANCE.md  RESEARCH_2026-02-22_WINDOWS_SHARE_AUDIT.md  RESEARCH_2026-02-24_ADVERSARY_TESTBED.md  RESEARCH_2026-02-24_THREAT_SURFACE_EXPANSION.md  REVIEW_2026-02-20.md  ROADMAP.md  ROADMAP_UPDATE_2026.md  RULESET_TRUST.md  SARIF.md  SBOM.md  SCAN_LEARNING_LOOP.md  SECURITY_MODEL.md  SECURITY_RESPONSE.md  SESSION_MEMORY.jsonl  (+32 more)
foxclaw/: __init__.py  __main__.py  cli.py  models.py  profiles.py  scan.py
foxclaw-rs/: Cargo.toml
foxclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: adversary_profiles.py  build_extension_catalog.py  certify.sh  check_secrets.sh  check_ws_floor_sync.py  container_workspace_exec.sh  dependency_audit.sh  docker_exec.sh  docs_contract_check.py  firefox_container_demo.sh  fixture_scan.sh  (+28 more)
(+193 files in other folders)
