[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxclaw"
version = "0.1.0"
description = "Deterministic, read-only Firefox security posture scanner"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "typer",
  "pydantic",
  "rich",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "jsonschema",
  "pytest",
  "ruff",
  "mypy",
  "types-PyYAML",
]

[project.scripts]
foxclaw = "foxclaw.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["foxclaw", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
files = ["foxclaw"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
strict_equality = true
show_error_codes = true
pretty = true

[tool.setuptools.packages.find]
include = ["foxclaw*"]
